// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popup Component should be able to change the container style 1`] = `
<View
  collapsable={false}
  nativeID="animatedComponent"
  style={
    Object {
      "backgroundColor": "#F4E6CA",
      "borderTopLeftRadius": 30,
      "borderTopRightRadius": 30,
      "bottom": 0,
      "elevation": 40,
      "height": "auto",
      "left": 0,
      "maxHeight": 1304,
      "position": "absolute",
      "shadowColor": "#B87015",
      "transform": Array [
        Object {
          "translateY": 1334,
        },
      ],
      "width": "100%",
      "zIndex": 3,
    }
  }
>
  <View
    style={
      Object {
        "alignSelf": "center",
        "backgroundColor": "#B66D12",
        "borderRadius": 3,
        "height": 6,
        "marginTop": 5,
        "width": 80,
      }
    }
  />
  <RCTScrollView
    contentContainerStyle={
      Object {
        "margin": 30,
      }
    }
  >
    <View>
      <Text>
        Some content
      </Text>
    </View>
  </RCTScrollView>
</View>
`;

exports[`Popup Component should open when isOpen is true 1`] = `
<View
  collapsable={false}
  nativeID="animatedComponent"
  style={
    Object {
      "backgroundColor": "#F4E6CA",
      "borderTopLeftRadius": 30,
      "borderTopRightRadius": 30,
      "bottom": 0,
      "elevation": 40,
      "height": "auto",
      "left": 0,
      "maxHeight": 1304,
      "position": "absolute",
      "shadowColor": "#B87015",
      "transform": Array [
        Object {
          "translateY": 1334,
        },
      ],
      "width": "100%",
      "zIndex": 3,
    }
  }
>
  <View
    style={
      Object {
        "alignSelf": "center",
        "backgroundColor": "#B66D12",
        "borderRadius": 3,
        "height": 6,
        "marginTop": 5,
        "width": 80,
      }
    }
  />
  <RCTScrollView>
    <View>
      <Text>
        Some content
      </Text>
    </View>
  </RCTScrollView>
</View>
`;

exports[`Popup Component should render correclty and closed when isOpen is false 1`] = `
<View
  collapsable={false}
  nativeID="animatedComponent"
  style={
    Object {
      "backgroundColor": "#F4E6CA",
      "borderTopLeftRadius": 30,
      "borderTopRightRadius": 30,
      "bottom": 0,
      "elevation": 40,
      "height": "auto",
      "left": 0,
      "maxHeight": 1304,
      "position": "absolute",
      "shadowColor": "#B87015",
      "transform": Array [
        Object {
          "translateY": 1334,
        },
      ],
      "width": "100%",
      "zIndex": 3,
    }
  }
>
  <View
    style={
      Object {
        "alignSelf": "center",
        "backgroundColor": "#B66D12",
        "borderRadius": 3,
        "height": 6,
        "marginTop": 5,
        "width": 80,
      }
    }
  />
  <RCTScrollView>
    <View>
      <Text>
        Some content
      </Text>
    </View>
  </RCTScrollView>
</View>
`;
